--- a/templates/index.html
+++ b/templates/index.html
@@ -5,25 +5,46 @@
 <style> body {margin:0;} </style>
 <script>
   const scene = new THREE.Scene();
-  // FOV:75deg, Aspect ratio, near:0.1, far:1000(レンダリングする範囲)
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+  const FOV = 45;
+  const NEAR = 1; // レンダリングする範囲 NEAR~FAR
+  const FAR = 500;
+  const camera = new THREE.PerspectiveCamera(FOV, window.innerWidth / window.innerHeight, NEAR, FAR);
+  camera.position.set(0, 0, 100);
+  camera.lookAt(0, 0, 0);
 
   const renderer = new THREE.WebGLRenderer();
   renderer.setSize(window.innerWidth*0.8, window.innerHeight*0.8);
   document.body.appendChild(renderer.domElement);
 
-  const geometry = new THREE.BoxGeometry();
-  
-  const cubemat = new THREE.MeshBasicMaterial({color:0x339999});
-  const cube = new THREE.Mesh(geometry, cubemat);
-  scene.add(cube);
+  // cube
+  //const cubegeo = new THREE.BoxGeometry();
+  //const cubemat = new THREE.MeshBasicMaterial({color:0x339999});
+  //const cube = new THREE.Mesh(cubegeo, cubemat);
+  //scene.add(cube);
 
-  camera.position.z = 5;
+  //line
+  const linemat = new THREE.LineBasicMaterial({color:0x3366ff});
+  const linepts = [];
+  linepts.push(new THREE.Vector3(-10, 0, 0));
+  linepts.push(new THREE.Vector3(0, 10, 0));
+  linepts.push(new THREE.Vector3(10, 0, 10));
+  const linegeo = new THREE.BufferGeometry().setFromPoints(linepts);
+  const line = new THREE.Line(linegeo, linemat);
+  scene.add(line);
 
+  function rotCam(angle){
+    const DIA = 100;
+    camera.position.set(0, DIA*Math.sin(angle / 180 * Math.PI), DIA*Math.cos(angle / 180 * Math.PI));
+    camera.lookAt(0, 0, 0);
+  }
+
+  let angle = 90;
   function animate() {
     requestAnimationFrame(animate);
-    cube.rotation.x += 0.01;
-    cube.rotation.y += 0.001;
+    //cube.rotation.x += 0.01;
+    //cube.rotation.y += 0.001;
+    rotCam(angle);
+    angle += 1;
     renderer.render(scene, camera);
   }
   animate();
