--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
   const spWidSeg = 16;
   const spHeiSeg = 16;
   const spGeo = new THREE.SphereGeometry(spRadius, spWidSeg, spHeiSeg);
-  const spMat = new THREE.MeshBasicMaterial({color:0x3366ff});
+  const spMat = new THREE.MeshBasicMaterial({color:0x339999});
   const spMesh1 = new THREE.Mesh(spGeo, spMat);
   const spMesh2 = new THREE.Mesh(spGeo, spMat);
   spMesh1.position.set(2, 2, 0);
